--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,6 @@
 name: Generate terraform docs
 
-on:
-  push:
-    branches:
-      - master
+on: [pull_request]
 
 jobs:
   docs:
@@ -11,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: master
+        ref: ${{ github.head_ref }}
 
     - name: Render terraform docs inside the README.md and push changes back to pushed branch
       uses: DNXLabs/terraform-docs@v1.0.0
